# eigenwise-toolshed

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: FUNDING.yml
.github/workflows/: docs.yml
docs/: .gitignore  README.md  astro.config.mjs  modular-architecture.md  package-lock.json  package.json
docs/screenshots/: capture.mjs  manifest.json
docs/scripts/: generate-reference.mjs
docs/src/styles/: custom.css
examples/code-and-ode/: .gitignore
examples/code-and-ode/.claude/: live-rules.md  settings.json
examples/haiku-jar/: .gitignore  README.md  pyproject.toml
examples/haiku-jar/.claude/: settings.json
examples/haiku-jar/.claude/.codebase-info/: .map-state.json  INDEX.md  architecture.md  coding-style.md  directory-structure.md  entry-points.md  modules.md  onboarding.md  patterns.md  tech-landscape.md
examples/haiku-jar/src/haiku_jar/: __init__.py  __main__.py  cli.py  haiku.py  jar.py  storage.py
examples/haiku-jar/tests/: test_jar.py
examples/token-observability-demo/: README.md
plugins/codebase-mapper/: README.md
plugins/codebase-mapper/.claude-plugin/: plugin.json
plugins/codebase-mapper/hooks/: hooks.json  inject-context.js  (+1 more)
plugins/codex-gateway/: README.md
plugins/live-rules/: README.md
plugins/sidequest/: .mcp.json  README.md  package-lock.json  package.json  tsconfig.json
plugins/switchboard/: .mcp.json  README.md
plugins/test-support/: windows-hide.js
plugins/toolshed-guard/: README.md
plugins/workbench/: README.md
plugins/workspace-init/: README.md
(+428 files in other folders)
